<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            style="@style/TextAppearanceListCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:padding="16dp"
            android:text="@string/choose_model_to_run"
            android:textSize="30sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/mobile_net_cardview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/mobile_net_imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_tech" />

                <TextView
                    android:id="@+id/mobile_net_title_textview"
                    style="@style/TextAppearanceListCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mobile_net_imageview"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/mobile_net_title" />

                <TextView
                    style="@style/TextAppearanceListCardDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mobile_net_title_textview"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/mobile_net_helper" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/res_net_cardview"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="0dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/res_net_imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_tech" />

                <TextView
                    android:id="@+id/res_net_title_textview"
                    style="@style/TextAppearanceListCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/res_net_imageview"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/res_net_title" />

                <TextView
                    style="@style/TextAppearanceListCardDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/res_net_title_textview"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/res_net_helper" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
